--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@types/lodash": "^4.17.5",
+    "framer-motion": "^11.2.10",
     "graphql-ws": "^5.16.0",
     "lodash": "^4.17.21",
     "next": "14.2.3",
