--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@types/lodash": "^4.17.5",
     "framer-motion": "^11.2.10",
     "graphql-ws": "^5.16.0",
